# TrueVoice-Voice-AI-Hack

./: .gitignore  README.md  voice-ai-hack-prds.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  eventbus.py  main.py  models.py  rooms.py  test_page.py
backend/app/api/: debug.py  report.py  rooms.py
backend/app/services/: claude.py  concordance.py  distributor.py  speechmatics.py  thymia.py
backend/app/ws/: audio.py  dashboard.py  signaling.py
backend/tests/: _smoke_thymia.py  conftest.py  test_config.py  test_distributor.py  test_eventbus.py  test_health.py  test_models.py  test_rooms.py  test_speechmatics.py  test_ws_audio.py  test_ws_dashboard.py
backend/tests/integration/: conftest.py  test_live_audio.py  test_live_dashboard.py  test_live_server.py
docs/: mermaid-config.json  pipeline.mmd
docs/superpowers/plans/: 2026-04-18-truevoice-backend-phase-1-scaffold.md  2026-04-18-truevoice-backend-phase-2-audio-ingress.md  2026-04-18-truevoice-backend-phase-3-speechmatics.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BiomarkerLane.tsx  ClinicianVideoPanel.tsx  ConcordanceMeter.tsx  Dashboard.tsx  FlagCard.tsx  MeetingControls.tsx  MicMeter.tsx  NavBar.tsx  RoomTimer.tsx  TranscriptLane.tsx  VideoTile.tsx
frontend/lib/: audioCapture.ts  concordanceRisk.ts  dashboardSocket.ts  mockEvents.ts  types.ts  useVideoCall.ts  userMedia.ts  utils.ts
frontend/public/: pcm-worklet.js
(+8 files in other folders)
