[project]
name = "truevoice-backend"
version = "0.1.0"
description = "TrueVoice clinical voice-intelligence backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "websockets>=13",
    "speechmatics-rt>=1.0",
    "thymia-sentinel>=1.1",
    "anthropic>=0.40",
    "nanoid>=2.0",
    "numpy>=1.26",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live-server integration tests (spawn real uvicorn; slower)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
